KDR002 -  fix bug #106794 (chưa set thuộc tính required cho control ngày tháng)

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdr/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdr/002/a/index.xhtml
@@ -85,7 +85,8 @@
 										value: printDate , 
 										dateFormat: 'yearmonth',
 										name:'#[KDR002_8]',
-										enable:selectedDateType() == 1
+										enable:selectedDateType() == 1,
+										required:selectedDateType() == 1
 										}">
 							</div>
 						</div>
