update side & top menu style

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
@@ -1,7 +1,13 @@
 .modal {
+    //-webkit-overflow-scrolling: touch;
+    &-backdrop {
+        &.show {
+            opacity: 0.2;
+        }
+    }
     &-open {
         overflow: hidden;
-    } //-webkit-overflow-scrolling: touch;
+    }
     &.show {
         display: block;
         .modal-dialog {
