--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
@@ -1,57 +1,11 @@
 body {
-    &.show {
-        &-menu-top {
-            position: relative;
-            overflow: hidden;
-            height: 100%;
-            .modal-backdrop {
-                overflow: hidden;
-                touch-action: none;
-            }
-            .sidebar {
-                margin-left: -370px;
-                &.iphone {
-                    margin-left: calc(-100vw - 50px);
-                }
-            }
-            .navbar-brand {
-                padding-left: 15px;
-            }
-        }
-        &-side-bar {
-            overflow: hidden;
-            height: 100%;
-            .navbar-toggler {
-                transition-delay: 0.1s;
-                margin-right: - 50px;
-            }
-            .container,
-            .container-fluid {
-                overflow: hidden;
-                position: relative;
-                touch-action: none;
-            }
-            .modal-backdrop {
-                overflow: hidden;
-                position: fixed;
-                touch-action: none;
-            }
-        }
-    }
-    .container,
-    .container-fluid {
-        cursor: pointer;
-    }
-}
-
-@media (max-width: 767.98px) {
-    body {
-        &.modal-open {
-            .sidebar {
-                margin-left: -370px;
-            }
-            .navbar-brand {
-                padding-left: 15px;
+    .wrapper {
+        .sidebar {
+            &+.container,
+            &+.container-fluid {
+                padding-top: 55px;
+                min-height: 100vh;
+                transition: all 0.6s cubic-bezier(0.810, -0.330, 0.345, 1.375);
             }
         }
     }
