--- a/nts.uk/uk.mobile/ClientApp/views/home/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/home/index.html
@@ -1,12 +1,21 @@
 <div id="home">
-    <div class="btn-toolbar">
-        <div class="btn-group mr-4 mb-3">
-            <button type="button" class="btn btn-secondary">New</button>
-            <button type="button" class="btn btn-primary">Save</button>
-            <button type="button" class="btn btn-danger">Delete</button>
+    <div v-toolbar>
+        <div class="row">
+            <div class="col-md-9">
+                <button type="button" class="btn btn-link"><i class="fa fa-save"></i></button>
+                <button type="button" class="btn btn-link">Middle</button>
+                <button type="button" class="btn btn-link">Right</button>
+            </div>
+            <div class="col-md-3">
+                <div class="input-group">
+                    <input type="text" class="form-control" />
+                    <div class="input-group-append">
+                        <button class="btn btn-secondary"><i class="fa fa-search"></i></button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-3">
             <ul class="list-group">
