--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
@@ -20,6 +20,15 @@ body {
                 transition: all 0.6s cubic-bezier(0.810, -0.330, 0.345, 1.375);
                 h3 {
                     flex: 1;
+                    margin: 0;
+                    padding: 4px;
+                    a {
+                        color: #fff;
+                        text-decoration: none;
+                        span {
+                            color: #fff;
+                        }
+                    }
                 }
                 .navbar-btn {
                     width: 40px;
