--- a/nts.uk/uk.mobile/ClientApp/views/components/time-component/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/components/time-component/index.html
@@ -19,4 +19,18 @@
         v-bind:constraint="validations.time"
         :errors-always="$errors.title"
         :columns="{title: 'col-md-2', input: 'col-md-4'}" />
+
+    <v-input-date
+        v-model="date"
+        :name="'date'"
+        :disabled="disabled"
+        :show-title="true"
+        v-bind:constraint="validations.date"
+        :errors-always="$errors.title"
+        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
+
+    <input class="form-control"
+        ref="input"
+        type="date"
+        v-model="date1" />
 </div>
