fix 106815, add style

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/stopuse/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/stopuse/index.xhtml
@@ -17,7 +17,7 @@
 		<ui:define name="content">
 			<div id="contents-area" class="cf">
 			
-				<div id="stop-use-message" data-bind="text: message">
+				<div id="stop-use-message" style="white-space: pre-wrap;" data-bind="text: message">
 				</div>
 				<button class="large" data-bind="click: gotoLogin">ログイン画面へ</button>
 			</div>
