--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
@@ -184,6 +184,7 @@ body {
     body {
         .wrapper {
             .sidebar {
+                //position: relative;
                 border-right: 2px solid darken($color: $primary, $amount: 5);
             }
         }
