--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
@@ -1,5 +1,6 @@
 body {
     .wrapper {
+        display: flex;
         .sidebar {
             &+.container,
             &+.container-fluid {
@@ -7,6 +8,12 @@ body {
                 min-height: 100vh;
                 transition: all 0.6s cubic-bezier(0.810, -0.330, 0.345, 1.375);
             }
+        }
+    }
+    &.show-side-bar {
+        .container,
+        .container-fluid {
+            padding-left: 270px;
         }
     }
 }
