update focus directive document

--- a/nts.uk/uk.mobile/ClientApp/views/documents/directives/focus/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/directives/focus/index.html
@@ -1,4 +1,7 @@
 <div id="focus_docs">
-    
     <markdown />
+    <h5>3. Kết quả</h5>
+    <div class="form-group">
+        <input v-focus type="text" class="form-control" />
+    </div>
 </div>
