--- a/nts.uk/uk.mobile/ClientApp/views/home/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/home/index.html
@@ -4,7 +4,7 @@
             <div class="col-md-9">
                 <button type="button" class="btn btn-link"><i class="fa fa-save"></i></button>
                 <button type="button" class="btn btn-link">Middle</button>
-                <button type="button" class="btn btn-link">Right</button>
+                <button type="button" class="btn btn-link" v-on:click="alertNow">Alert</button>
             </div>
             <div class="col-md-3">
                 <div class="input-group">
