update container css animate on small device

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
@@ -10,10 +10,19 @@ body {
             }
         }
     }
-    &.show-side-bar {
-        .container,
-        .container-fluid {
-            padding-left: 270px;
+}
+
+@media (min-width: 992px) {
+    body {
+        &.show-side-bar {
+            .wrapper {
+                .sidebar {
+                    &+.container,
+                    &+.container-fluid {
+                        padding-left: 270px;
+                    }
+                }
+            }
         }
     }
 }
