--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/time-editor/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/time-editor/index.html
@@ -1,7 +1,33 @@
-<div>
-    <nts-time-editor v-model="minutes">
+<div id="time-component">
+    
+    <nts-time-editor
+        v-model="time"
+        :name="'time-with-day'"
+        :disabled="false"
+        time-input-type="time-with-day"
+        :show-title="true"
+        v-bind:constraint="validations.time"
+        :errors-always="$errors.title"
+        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
 
-    </nts-time-editor>
+    <nts-time-editor
+        v-model="time"
+        :name="'time-diration'"
+        :disabled="false"
+        time-input-type="time-duration"
+        :show-title="true"
+        v-bind:constraint="validations.time"
+        :errors-always="$errors.title"
+        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
 
-    <input type="time" >
+    <nts-time-editor
+        v-model="time"
+        :name="'time-point'"
+        :disabled="false"
+        time-input-type="time-point"
+        :show-title="true"
+        v-bind:constraint="validations.time"
+        :errors-always="$errors.title"
+        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
+
 </div>
