update util and plugin

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -16,4 +16,5 @@
 @import './lumen/listgroup.scss';
 @import './lumen/code.scss';
 @import './lumen/markdown.scss';
-@import './lumen/time-editor.scss'
+@import './lumen/time-editor.scss';
+@import './lumen/dropdown.scss';
