qmm016: update & fixbugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/qmm016.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/qmm016.a.style.css
@@ -49,3 +49,8 @@
 .nts-grid-sheet-buttons {
 	display: none;
 }
+
+#grid2_container {
+	margin-left: -2px !important;
+	margin-right: -2px !important;
+}
