CCG022 - fix bug #106824 (nếu không outfocus thì không cập nhật hiển thị lỗi)

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
@@ -69,7 +69,8 @@
 																constraint: 'StopMessage', 
 																option: { width: '500px'},
 																enable:selectedSystemMode()==1,
-																required:selectedSystemMode()==1
+																required:selectedSystemMode()==1,
+																immediateValidate :true
 																}"></textarea>
 						</div>
 					</div>
@@ -99,7 +100,8 @@
 																constraint: 'StopMessage', 
 																option: { width: '500px'},
 																enable:selectedSystemMode()==2,
-																required:selectedSystemMode()==2
+																required:selectedSystemMode()==2,
+																immediateValidate :true
 																}"></textarea>
 						</div>
 					</div>
