add float action (float button group directive)

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -18,3 +18,4 @@
 @import './lumen/markdown.scss';
 @import './lumen/time-editor.scss';
 @import './lumen/dropdown.scss';
+@import './lumen/floatbtn.scss';
