--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
@@ -12,24 +12,29 @@ body {
             background-color: $primary;
             border-left: 1px solid darken($color: $primary, $amount: 5);
             transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+
             .sidebar-header {
                 display: flex;
                 flex-direction: row;
                 justify-content: flex-end;
                 margin-right: -45px;
                 transition: all 0.6s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+
                 h3 {
                     flex: 1;
                     margin: 0;
                     padding: 4px;
+
                     a {
                         color: #fff;
                         text-decoration: none;
+
                         span {
                             color: #fff;
                         }
                     }
                 }
+
                 .navbar-btn {
                     width: 40px;
                     cursor: pointer;
@@ -37,9 +42,11 @@ body {
                     padding: 0;
                     border-color: transparent;
                     background-color: transparent;
+
                     &:focus {
                         outline: none;
                     }
+
                     span {
                         width: 60%;
                         height: 2px;
@@ -50,6 +57,7 @@ body {
                     }
                 }
             }
+
             ul {
                 &.components {
                     cursor: pointer;
@@ -57,6 +65,7 @@ body {
                     padding-bottom: 25px;
                     -webkit-overflow-scrolling: touch;
                     max-height: calc(100vh - 40px);
+
                     .dropdown-toggle::after {
                         display: block;
                         position: absolute;
@@ -64,39 +73,67 @@ body {
                         right: 20px;
                         transform: translateY(-50%);
                     }
+
                     li {
                         a {
                             display: block;
                             color: #fff;
                             font-size: 1.1em;
+
                             &:hover {
                                 color: #fff;
                             }
+
                             &.collapse {
                                 position: relative;
                             }
+
                             span {
                                 padding: 10px;
                                 display: block;
                             }
                         }
                     }
+
                     .collapse {
                         &:after {
                             transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
                         }
+
                         &.show:after {
                             transform: rotate(180deg) translate(2px, 2px);
                         }
                     }
                 }
+
                 ul a {
                     font-size: 0.9em !important;
                     padding-left: 30px !important;
                 }
             }
+
+            a {
+                &:hover {
+                    cursor: pointer;
+                    text-decoration: none;
+                    background-color: darken($color: $primary, $amount: 5);
+                }
+            }
+
+            .collapse {
+                &.show {
+                    background-color: darken($color: $primary, $amount: 5);
+
+                    a {
+                        &:hover {
+                            background-color: darken($color: $primary, $amount: 10);
+                        }
+                    }
+                }
+            }
         }
     }
+
     &.modal-open {
         .wrapper {
             .sidebar {
@@ -106,23 +143,29 @@ body {
             }
         }
     }
+
     &.show-side-bar {
         .wrapper {
             .sidebar {
                 margin-left: 0;
+
                 .sidebar-header {
                     margin-right: 0;
+
                     .navbar-btn {
                         span {
                             opacity: 1;
                             margin: 0 auto;
+
                             &:first-of-type {
                                 transform: rotate(45deg) translate(2px, 2px);
                             }
+
                             &:nth-of-type(2) {
                                 opacity: 0;
                                 transform: none;
                             }
+
                             &:last-of-type {
                                 transform: rotate(-45deg) translate(1px, -1px);
                             }
@@ -132,6 +175,7 @@ body {
             }
         }
     }
+
     &.show-menu-top {
         .wrapper {
             .sidebar {
@@ -153,21 +197,26 @@ body {
                     min-width: 100vw;
                     max-width: 100vw;
                     margin-left: -100vw;
+
                     &.show {
                         margin-left: 0;
                         border-right: 0;
+
                         .sidebar-header {
                             margin-right: 0;
                         }
                     }
                 }
+
                 ul.components {
                     border-top: 4px solid darken($color: $primary, $amount: 5);
                 }
+
                 &.show {
                     margin-left: 0;
                     transform: none;
                     border-right: 1px solid darken($color: $primary, $amount: 5);
+
                     ul {
                         &.components {
                             margin: 0;
