--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -25,7 +25,7 @@
 							<!--A2_12  申請ラベル-->	
 							<th class="kaf005_overtimeAgreement_header" style="display: none">#{i18n.getText('KAF005_27')}</th>
 							<!--A2_13  合計ラベル-->
-							<th class="kaf005_overtimeAgreement_header">#{i18n.getText('KAF005_28')}</th>
+							<th class="kaf005_overtimeAgreement_header" style="display: none">#{i18n.getText('KAF005_28')}</th>
 						</tr>
 					</thead>
 					<tbody data-bind="foreach: overtimeWork">
@@ -39,7 +39,7 @@
 							<!--A2_17  申請ラベル-->
 							<td style="display: none" data-bind="text: appTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
 							<!--A2_18  合計ラベル-->
-							<td data-bind="text: totalTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
+							<td style="display: none" data-bind="text: totalTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
 						</tr>
 					</tbody>
 				</table>
