--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -23,9 +23,9 @@
 							<!--A2_11 実績ラベル--> 						
 							<th class="kaf010_overtimeAgreement_header">#{i18n.getText('KAF010_26')}</th>
 							<!--A2_12  申請ラベル-->	
-							<th class="kaf010_overtimeAgreement_header">#{i18n.getText('KAF010_27')}</th>
+							<th class="kaf010_overtimeAgreement_header" style="display: none">#{i18n.getText('KAF010_27')}</th>
 							<!--A2_13  合計ラベル-->
-							<th class="kaf010_overtimeAgreement_header">#{i18n.getText('KAF010_28')}</th>
+							<th class="kaf010_overtimeAgreement_header" style="display: none">#{i18n.getText('KAF010_28')}</th>
 						</tr>
 					</thead>
 					<tbody data-bind="foreach: overtimeWork">
@@ -37,9 +37,9 @@
 							<!--A2_16 当月実績時間--> 						
 							<td data-bind="text: actualTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
 							<!--A2_17  当月申請時間-->
-							<td data-bind="text: appTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
+							<td style="display: none" data-bind="text: appTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
 							<!--A2_18  当月合計時間-->
-							<td data-bind="text: totalTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
+							<td style="display: none" data-bind="text: totalTime, style: { 'background-color': backgroundColor, 'color': textColor }"></td>
 						</tr>
 					</tbody>
 				</table>
