--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/time-editor/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/time-editor/index.html
@@ -1,8 +1,10 @@
 <div id="time-component">
     
+    <h2>1. Demo</h2>
+
     <nts-time-editor
         v-model="time"
-        :name="'time-with-day'"
+        :name="'Time-With-Day'"
         :disabled="false"
         time-input-type="time-with-day"
         :show-title="true"
@@ -12,17 +14,7 @@
 
     <nts-time-editor
         v-model="time"
-        :name="'time-diration'"
-        :disabled="false"
-        time-input-type="time-duration"
-        :show-title="true"
-        v-bind:constraint="validations.time"
-        :errors-always="$errors.title"
-        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
-
-    <nts-time-editor
-        v-model="time"
-        :name="'time-point'"
+        :name="'Time-Point'"
         :disabled="false"
         time-input-type="time-point"
         :show-title="true"
@@ -30,4 +22,14 @@
         :errors-always="$errors.title"
         :columns="{title: 'col-md-2', input: 'col-md-4'}" />
 
+    <nts-time-editor
+        v-model="time"
+        :name="'Time-Duration'"
+        :disabled="false"
+        time-input-type="time-duration"
+        :show-title="true"
+        v-bind:constraint="validations.time"
+        :errors-always="$errors.title"
+        :columns="{title: 'col-md-2', input: 'col-md-4'}" />   
+    <markdown />
 </div>
