add color class & color documents

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -4,6 +4,8 @@
 @import './node_modules/bootstrap/scss/bootstrap';
 @import './node_modules/bootswatch/dist/lumen/bootswatch';
 
+@import './lumen/color.scss';
+
 @import './lumen/container.scss';
 @import './lumen/modal.scss';
 @import './lumen/label.scss';
