--- a/nts.uk/uk.mobile/ClientApp/views/ccg007/resetpass/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg007/resetpass/index.html
@@ -1,4 +1,4 @@
-<div id="change-pass">
+<div id="reset-pass">
         <div class="text-center page-title">{{ 'reset_pass_title' | i18n }}</div>
         <div class="text-left page-info">
             <div>{{ model.employeeName }}</div>
