--- a/nts.uk/uk.mobile/ClientApp/views/ccg007/mailsent/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg007/mailsent/index.html
@@ -1,4 +1,4 @@
-<div id="change-pass">
+<div id="sent-mail">
     <div class="text-left page-info"> {{ 'Msg_207' | i18n }}</div>
     <button class="btn btn-primary btn-block" v-on="$click(toLogin.bind(this))">ログイン画面に戻る</button>
 </div>
