update for login and get program info

--- a/nts.uk/uk.mobile/ClientApp/views/ccg007/changepass/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg007/changepass/index.html
@@ -5,7 +5,7 @@
         <div>{{ 'CCG007_14' | i18n }}</div>
     </div>
     <fieldset class="login-form">
-        <v-input-password
+        <nts-input-password
             class="control-label-inline"
             v-model="model.currentPassword"
             name='CCG007_15'
@@ -15,7 +15,7 @@
             v-bind:errors-always="$errors.model.currentPassword"
             v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
 
-        <v-input-password
+        <nts-input-password
             class="control-label-inline"
             v-model="model.newPassword"
             name='CCG007_16'
@@ -25,7 +25,7 @@
             v-bind:errors-always="$errors.model.newPassword"
             v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
 
-        <v-input-password
+        <nts-input-password
             class="control-label-inline"
             v-model="model.newPasswordConfirm"
             name='CCG007_17'
