KAF011 - KAF010 - KAF009 - KAF007 - fix bug #106967 & #106970 (ẩn control "直行する／しない")

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
@@ -107,7 +107,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="table">
+			<!-- <div class="table">
 				<div class="cell valign-top lblTitleKAF009"></div>
 				<div class="cell valign-center">
 					<div style="display: inline-block; width: 250px;">
@@ -138,7 +138,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="table">
 				<div class="cell valign-top lblTitleKAF009"></div>
 				<div class="cell valign-center">
@@ -195,7 +195,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="table">
+			<!-- <div class="table">
 				<div class="cell valign-top lblTitleKAF009"></div>
 				<div class="cell valign-center">
 					<div style="display: inline-block; width: 250px;">
@@ -226,7 +226,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="table">
 				<div class="cell valign-top lblTitleKAF009"></div>
 				<div class="cell valign-center">
