--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -235,7 +235,7 @@
 				<div class="cell valign-top cm-column2">
 				<div class="lblTitle"></div>
 				</div>
-				<div tabindex="12" class="row-cell-margin right-content"
+				<!-- <div tabindex="12" class="row-cell-margin right-content"
 						data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_3')}',
 										options:ko.observableArray([
 								                { goCode1: 1, goName1: '#{i18n.getText('KAF009_16')}' },
@@ -255,7 +255,7 @@
 										optionsValue: 'backCode1',
 										optionsText: 'backName1',
 										value: backSelected1}">
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!-- Man chi tiet -->
