--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
@@ -186,12 +186,12 @@
 				</div>
 
 			</div>
-			<div class="table">
+			<!-- <div class="table">
 				<div class="cell valign-top lblTitle-kaf007"></div>
 				<div class="cell valign-center row-width">
-					<!--A7_4 直行区分-->
-					<!--A7_4_1 直行する-->
-					<!--A7_4_2 直行しない-->
+					A7_4 直行区分
+					A7_4_1 直行する
+					A7_4_2 直行しない
 					<div>
 						<div class="row-cell-margin"
 							data-bind="ntsSwitchButton: {
@@ -206,9 +206,9 @@
 						</div>
 					</div>
 				</div>
-				<!--A7_5 直帰区分-->
-				<!--A7_5_1 直帰する-->
-				<!--A7_5_2 直帰しない-->
+				A7_5 直帰区分
+				A7_5_1 直帰する
+				A7_5_2 直帰しない
 				<div class="cell valign-center row-width">
 					<div class="row-cell-margin"
 						data-bind="ntsSwitchButton: {
@@ -222,7 +222,7 @@
 									enable: $parent.timeRequired }">
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<!--A8 勤務時間２-->
 		 <div class="valign-center control-group-kaf007" data-bind="if: $parent.isMultipleTime"> 
@@ -256,12 +256,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="table">
+			<!-- <div class="table">
 				<div class="cell valign-top lblTitle-kaf007"></div>
 				<div class="cell valign-center row-width">
-					<!--A8_4 直行区分２-->
-					<!--A8_4_1 直行する２-->
-					<!--A8_4_2 直行しない２-->
+					A8_4 直行区分２
+					A8_4_1 直行する２
+					A8_4_2 直行しない２
 					<div>
 						<div class="row-cell-margin"
 							data-bind="ntsSwitchButton: {
@@ -276,9 +276,9 @@
 						</div>
 					</div>
 				</div>
-				<!--A8_5 直帰区分２-->
-				<!--A8_5_1 直帰する２-->
-				<!--A8_5_2 直帰しない２-->
+				A8_5 直帰区分２
+				A8_5_1 直帰する２
+				A8_5_2 直帰しない２
 				<div class="cell valign-center row-width">
 					<div class="row-cell-margin"
 						data-bind="ntsSwitchButton: {
@@ -292,7 +292,7 @@
 									enable: $parent.timeRequired }">
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<!--A9 休憩時間-->
 		<div class="valign-center control-group-kaf007" data-bind="if: false">
