--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/date-input/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/date-input/index.html
@@ -3,11 +3,6 @@
     <label><i> Chú ý: Sử dụng demo này bằng <b>Smartphone</b></i></label>
     <nts-date-input
         v-model="date"
-        :name="'Date Item'"
-        :disabled="disabled"
-        :show-title="true"
-        v-bind:constraint="validations.date"
-        :errors-always="$errors.title"
-        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
+        :name="'Date Item'"/>
     <markdown/>
 </div>
