--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/text-editor/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/text-editor/index.html
@@ -4,11 +4,7 @@
 
     <nts-text-editor
         v-model="text"
-        :name="'Text Item'"
-        :disabled="false"
-        :show-title="true"
-        :errors-always="$errors.title"
-        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
+        :name="'Text Item'"/>
 
     <markdown />
 </div>
