add author of documents

--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/date-input/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/date-input/index.html
@@ -1,4 +1,9 @@
 <div id="time-component">
+
+    <br/>
+    <label>Tạo bởi: <b>Phạm Văn Dân</b></label>
+    <br/>
+    
     <h2>1. Demo </h2>
     <label><i> Chú ý: Sử dụng demo này bằng <b>Smartphone</b></i></label>
     <nts-date-input
