--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/dropdown/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/dropdown/index.html
@@ -1,4 +1,8 @@
 <div id="text-component">
+
+    <br/>
+    <label>Tạo bởi: <b>Phạm Văn Dân</b></label>
+    <br/>
     
     <h2>1. Demo</h2>
 
@@ -9,8 +13,8 @@
             <option v-for="item in dropdownList" :value="item.code">
                 {{item.code}} &nbsp;&nbsp;&nbsp;  {{item.text}}
             </option>
-            
-        </nts-dropdown>
+
+    </nts-dropdown>
 
     <markdown />
 </div>
