--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/textarea/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/textarea/index.html
@@ -1,5 +1,8 @@
 <div id="text-component">
     
+    <br/>
+    <label>Tạo bởi: <b>Phạm Văn Dân</b></label>
+    <br/>
     <h2>1. Demo</h2>
 
     <nts-text-area
