--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/time-editor/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/time-editor/index.html
@@ -1,4 +1,8 @@
 <div id="time-component">
+
+    <br/>
+    <label>Tạo bởi: <b>Phạm Văn Dân</b></label>
+    <br/>
     
     <h2>1. Demo</h2>
 
@@ -19,6 +23,6 @@
         :name="'Time-Duration'"
         time-input-type="time-duration"
         v-bind:constraint="validations.time"/>   
-        
+
     <markdown />
 </div>
