--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
@@ -6,7 +6,7 @@
     </div>
     <fieldset class="login-form">
         <nts-input-password
-            class="control-label-inline"
+            v-bind:inline-title="true"
             v-model="model.currentPassword"
             name='CCG007_15'
             v-bind:disabled="disabled"
@@ -16,7 +16,7 @@
             v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
 
         <nts-input-password
-            class="control-label-inline"
+            v-bind:inline-title="true"
             v-model="model.newPassword"
             name='CCG007_16'
             v-bind:disabled="disabled"
@@ -26,7 +26,7 @@
             v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
 
         <nts-input-password
-            class="control-label-inline"
+            v-bind:inline-title="true"
             v-model="model.newPasswordConfirm"
             name='CCG007_17'
             v-bind:disabled="disabled"
@@ -36,23 +36,26 @@
             v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" />
 
         <div class="accordion" v-nts-accordion>
-                <div class="card">
-                    <div class="card-header">
-                        <button class="btn" type="button">
-                            {{ 'CCG007_59' | i18n }}
-                        </button>
-                    </div>
-                    <div class="collapse">
-                        <div class="card-body">
-                            最低桁数：　{{ policy.lowestDigits }}文字
-                            複数条件：　英字{{ policy.alphabetDigit }}桁、数字{{ policy.numberOfDigits }}桁、記号{{ policy.symbolCharacters}}桁
-                            履歴回数：　1度使ったパスワードは
-                                        過去{{ policy.historyCount }}回まで使用できません
-                            有効期間：　{{ policy.validPeriod}}日
-                        </div>
+            <div class="card">
+                <div class="card-header">
+                    <button class="btn btn-link" type="button">
+                        {{ 'CCG007_59' | i18n }}
+                    </button>
+                </div>
+                <div class="collapse">
+                    <div class="card-body">
+                        最低桁数：　{{ policy.lowestDigits }}文字<br/>
+                        複数条件：　英字{{ policy.alphabetDigit }}桁、数字{{ policy.numberOfDigits }}桁、記号{{ policy.symbolCharacters}}桁<br/>
+                        履歴回数：　1度使ったパスワードは<br/>
+                        　　　　　　過去{{ policy.historyCount }}回まで使用できません<br/>
+                        有効期間：　{{ policy.validPeriod}}日<br/>
                     </div>
                 </div>
             </div>
+        </div>
+        <br/>
+        <div class="mb-2">
             <button class="btn btn-primary btn-block" v-on="$click(changePass.bind(this))">変更してログインする</button>
+        </div>
     </fieldset>
 </div>
