--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
@@ -30,21 +30,24 @@
             <div class="accordion" v-nts-accordion>
                 <div class="card">
                     <div class="card-header">
-                        <button class="btn" type="button">
+                        <button class="btn btn-link" type="button">
                             {{ 'CCG007_59' | i18n }}
                         </button>
                     </div>
                     <div class="collapse">
                         <div class="card-body">
-                            最低桁数：　{{ policy.lowestDigits }}文字
-                            複数条件：　英字{{ policy.alphabetDigit }}桁、数字{{ policy.numberOfDigits }}桁、記号{{ policy.symbolCharacters}}桁
-                            履歴回数：　1度使ったパスワードは
-                                        過去{{ policy.historyCount }}回まで使用できません
-                            有効期間：　{{ policy.validPeriod}}日
+                            最低桁数：　{{ policy.lowestDigits }}文字<br/>
+                            複数条件：　英字{{ policy.alphabetDigit }}桁、数字{{ policy.numberOfDigits }}桁、記号{{ policy.symbolCharacters}}桁<br/>
+                            履歴回数：　1度使ったパスワードは<br/>
+                            　　　　　　過去{{ policy.historyCount }}回まで使用できません<br/>
+                            有効期間：　{{ policy.validPeriod}}日<br/>
                         </div>
                     </div>
                 </div>
             </div>
-            <button class="btn btn-primary btn-block" v-on="$click(changePass.bind(this))">変更してログインする</button>
+            <br/>
+            <div class="mb-2">
+                <button class="btn btn-primary btn-block" v-on="$click(changePass.bind(this))">変更してログインする</button>
+            </div>
         </fieldset>
     </div>
