update for login

--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
@@ -1,7 +1,7 @@
 <div id="change-pass">
     <div class="text-center page-title">{{ 'pass_change_title' | i18n }}</div>
-    <div class="text-left page-info">
-        <div>{{ model.employeeName }}</div>
+    <div class="text-left page-info alert-light alert">
+        <div>{{ model.userName }} さん</div>
         <div>{{ 'CCG007_14' | i18n }}</div>
     </div>
     <fieldset class="login-form">
