--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
@@ -1,4 +1,5 @@
 <div id="login">
+    <div class="text-center page-title">UniversalK</div>
     <fieldset class="login-form">
         <nts-dropdown
             v-model="model.comp"
@@ -47,7 +48,6 @@
         </div>
 
         <button class="btn btn-primary btn-block" @click="login"> {{'CCG007_3' | i18n}}</button>
-        <br/>
         <div class="text-center">
             <button class="btn btn-link" @click="forgetPass"> {{ 'CCG007_6' | i18n }} </button>
         </div>
