--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/style.scss
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/style.scss
@@ -1,7 +1,7 @@
 div#login {
     fieldset.login-form {
         padding: 1rem;
-        margin: 7rem 1rem 0 1rem;
+        margin: 0.5rem 1rem 0 1rem;
         border: 1px solid #ccc;
         border-radius: 15px;
         legend {
@@ -14,4 +14,7 @@ div#login {
             min-width: 120px;
         }
     }
+}
+.page-title{
+    font-size: 25px;
 }
