--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/e/index.html
@@ -1,7 +1,7 @@
 <div id="reset-pass">
         <div class="text-center page-title">{{ 'reset_pass_title' | i18n }}</div>
-        <div class="text-left page-info">
-            <div>{{ model.employeeName }}</div>
+        <div class="text-left page-info alert-light alert">
+            <div>{{ model.userName }}　さん</div>
             <div>{{ 'CCG007_29' | i18n }}<br/>
                 {{ 'CCG007_30' | i18n }}
             </div>
