update bootstrap utils (dropdown & checkgroup)

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -5,6 +5,7 @@
 @import './node_modules/bootswatch/dist/lumen/bootswatch';
 
 @import './lumen/color.scss';
+@import './lumen/ripple.scss';
 
 @import './lumen/container.scss';
 @import './lumen/modal.scss';
