--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/_variables.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/_variables.scss
@@ -5,7 +5,7 @@
 
 $primary: #4285f4 !default;
 $info: #33b5e5 !default;
-$secondary: #a6c !default;
+//$secondary: #a6c !default;
 $success: #00c851 !default;
 $danger: #ff3547 !default;
 $warning: #fb3 !default;
@@ -41,8 +41,8 @@ $bg-process-hover: #79E68B;
 
 $bg-disable: #D9D9D9;
 
-$border-color: #999999;
-$border-color-focus: #0096F2;
+//$border-color: #999999;
+//$border-color-focus: #0096F2;
 
 
 $color-working-day: #31859C;
