--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -82,3 +82,11 @@
         }
     }
 }
+
+.time-picker {
+    .form-control {
+        text-align: center;
+        padding-left: 3px;
+        padding-right: 3px;
+    }
+}
